# AetherLang

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_ROADMAP.md  README.md  aethc-bootstrap  aethc-bootstrap-full  aethc-full  aethc-simple  check_output.txt  output.bc  smoke_test  test.aeth  语法详细补充.txt  项目书.txt  项目书方向补充.txt
.cargo/: config.toml
docs/: AETHER_SCRIPT_SPEC.md  BOOK.md  FEATURES.md  FUTURE_FEATURES.md  GUIDE.md  HANDOFF.md  LANGUAGE.md  MIGRATION.md  PROJECT_ROADMAP.md  context-pattern.md  effects.json  grammar.ebnf  type_system.rules
examples/: ai_native_test.aeth  ai_native_test.c  asm_test.aeth  asm_test.c  core_test.aeth  core_test.c  effect_test.aeth  error_handling.aeth  fibonacci.aeth  fibonacci.c  generics_test.aeth  generics_test.c  hello.aeth  hello.ath  hello.c  if_else.aeth  if_else.c  kernel.ld  ownership.aeth  simple.aeth  struct_kernel_test.aeth  struct_kernel_test.c  struct_lit.aeth  struct_lit.c  struct_simple.aeth  struct_simple.c  struct_test.aeth  struct_test.c  test_print.aeth  test_print.c  variables.aeth  variables.c
jxz/: Jxz.toml
src/: main.rs  main.rs.bak
src_aether/: ast.aeth  ast.c  codegen.aeth  codegen.c  full_lexer.aeth  full_lexer.c  full_lexer.ir  ir_gen.aeth  ir_gen.c  ir_gen.ir  ir_to_llvm.aeth  ir_to_llvm.c  lexer.aeth  lexer.c  lexer_parser_test.aeth  lexer_parser_test.c  lexer_test.aeth  llvm_codegen.aeth  llvm_codegen.c  llvm_ffi.aeth  llvm_ffi.c  main.aeth  main.c  parser.aeth  parser.c  semantic.aeth  semantic.c  simple_lexer.aeth  simple_lexer.c  span.aeth  span.c  token.aeth  token.c
stdlib/: alloc.aeth  args.aeth  args.c  atomic.aeth  autograd.aeth  autograd.c  blas.aeth  core.aeth  cuda.aeth  fs.aeth  fs.c  graph.aeth  graph.c  helper.aeth  helper.c  io.aeth  io.c  jni.aeth  jni.c  llvm.aeth  llvm.c  matrix.aeth  matrix.c  metal.aeth  mmio.aeth  result.aeth  simd.aeth  simd.c  smoke_test.aeth  string.aeth  string.c  tensor.aeth  tensor.c  test_minimal.aeth  toml.aeth  toml.c  vec.aeth
tests/: assert_test.aeth  assert_test2.aeth  assert_test3.aeth  ast  blas_test.aeth  bool_test.aeth  bootstrap_simple  bootstrap_simple.aeth  bootstrap_simple_bin  bootstrap_test.aeth  closure_basic_test.aeth  closure_basic_test.c  closure_test.aeth  codegen  combined_test.aeth  else_if.aeth  enum_data.aeth  enum_minimal.aeth  enum_struct.aeth  enum_struct_field.aeth  enum_test.aeth  enum_tuple.aeth  exit_test.aeth  float_test  float_test.aeth  full_lexer  generic  generic_test.aeth  generic_test.ir  generics_test.aeth  generics_test.c  hello  hello.aeth  hello.c  hello_ath  hello_exe  (+101 more)
(+96 files in other folders)
