[package]
name = "aether-lang"
version = "0.1.0"
edition = "2021"
authors = ["Z1529"]
description = "AetherLang - A self-hosting systems programming language"
license = "Apache-2.0"
repository = "https://github.com/Z1529/AetherLang"

[features]
default = ["llvm"]  # LLVM is the primary backend (like Rust)
llvm = ["llvm-sys"]
c-only = []  # C backend fallback for environments without LLVM

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# LLVM bindings - requires LLVM 18 (standard availability)
# Enabled by default for LLVM backend
llvm-sys = { version = "180", optional = true }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization (for structured feedback)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing
pretty_assertions = "1.0"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "aethc"
path = "src/main.rs"
